src/test/deca/syntax/invalid/provided/chaine_incorrecte.deca
// Description:
//    tests de programme incorrect lexicalement (car présence du caractère '\')
//
// Resultats:
//    Ligne 9 : Erreur lexicale (et donc syntaxique).
//    
//

"\"
